--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,47 +3,44 @@ version: '3.3'
 services:
   # PostgreSQL Database
   postgres:
-    image: https://rugjamqi.mirror.aliyuncs.com
+    image: postgres:15-alpine
     container_name: lifetracker-postgres
     restart: unless-stopped
     environment:
       POSTGRES_DB: ${DB_NAME:-lifetracker}
       POSTGRES_USER: ${DB_USER:-lifetracker}
       POSTGRES_PASSWORD: ${DB_PASSWORD:-your-secure-password}
-    ports:
-      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - lifetracker-network
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U lifetracker -d lifetracker"]
-      timeout: 20s
-      retries: 10
+    ports:
+      - "5432:5432"
 
   # Redis Cache
   redis:
     image: redis:7-alpine
     container_name: lifetracker-redis
     restart: unless-stopped
-    ports:
-      - "6379:6379"
+    command: redis-server --appendonly yes
     volumes:
       - redis_data:/data
     networks:
       - lifetracker-network
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      timeout: 10s
-      retries: 5
+    ports:
+      - "6379:6379"
 
-  # Backend API
+  # Backend Service (使用预编译文件)
   backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
+    image: node:18-alpine
     container_name: lifetracker-backend
     restart: unless-stopped
+    working_dir: /app
+    command: sh -c "
+      echo 'Installing production dependencies...' &&
+      npm ci --only=production &&
+      echo 'Starting backend server...' &&
+      node backend-dist/main.js"
     environment:
       NODE_ENV: ${NODE_ENV:-production}
       DATABASE_URL: postgresql://${DB_USER:-lifetracker}:${DB_PASSWORD:-your-secure-password}@postgres:5432/${DB_NAME:-lifetracker}
@@ -51,44 +48,48 @@ services:
       JWT_SECRET: ${JWT_SECRET:-your-super-secret-jwt-key-change-in-production}
       JWT_EXPIRES_IN: 7d
       CORS_ORIGIN: https://${DOMAIN_NAME:-localhost}
-    ports:
-      - "3002:3002"
+      PORT: 3002
+    volumes:
+      - ./backend-dist:/app/backend-dist:ro
+      - ./backend-package.json:/app/package.json:ro
+      - ./backend-package-lock.json:/app/package-lock.json:ro
+      - /app/node_modules
     depends_on:
       - postgres
       - redis
-    volumes:
-      - ./backend:/app
-      - /app/node_modules
     networks:
       - lifetracker-network
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3001/health"]
-      timeout: 10s
-      retries: 5
+    ports:
+      - "3002:3002"
 
-  # Frontend Application
+  # Frontend Service (使用预编译文件)
   frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
+    image: node:18-alpine
     container_name: lifetracker-frontend
     restart: unless-stopped
+    working_dir: /app
+    command: sh -c "
+      echo 'Installing production dependencies...' &&
+      npm ci --only=production &&
+      echo 'Starting frontend server...' &&
+      npm start"
     environment:
       NODE_ENV: ${NODE_ENV:-production}
       NEXT_PUBLIC_API_URL: https://${DOMAIN_NAME:-localhost}/api
       NEXT_PUBLIC_APP_URL: https://${DOMAIN_NAME:-localhost}
-    ports:
-      - "3001:3001"
+      PORT: 3000
+    volumes:
+      - ./frontend-dist:/app/.next:ro
+      - ./frontend-package.json:/app/package.json:ro
+      - /app/node_modules
     depends_on:
       - backend
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
-      - /app/.next
     networks:
       - lifetracker-network
+    ports:
+      - "3001:3000"
 
-  # Nginx Reverse Proxy (for production)
+  # Nginx Reverse Proxy
   nginx:
     image: nginx:alpine
     container_name: lifetracker-nginx
@@ -97,11 +98,11 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/ssl:/etc/nginx/ssl
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/ssl:/etc/nginx/ssl:ro
     depends_on:
-      - frontend
       - backend
+      - frontend
     networks:
       - lifetracker-network
 
