--- a/nginx/nginx.simple.conf
+++ b/nginx/nginx.simple.conf
@@ -35,7 +35,7 @@ http {
     server {
         listen 80;
         listen 443 ssl http2;
-        server_name ${DOMAIN_NAME} www.${DOMAIN_NAME};
+        server_name t1n9.xyz www.t1n9.xyz;
         
         # SSL配置
         ssl_certificate /etc/nginx/ssl/cert.pem;
