fix: 修复npm依赖安装问题，添加最小化部署方案

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,6 +43,9 @@ jobs:
         cp -r backend/dist deploy-package/backend-dist
         cp backend/package.json deploy-package/backend-package.json
         cp backend/package-lock.json deploy-package/backend-package-lock.json
+        # 复制到根目录以便部署脚本使用
+        cp backend/package.json deploy-package/package.json
+        cp backend/package-lock.json deploy-package/package-lock.json
 
         # 复制前端文件
         cp -r frontend/.next deploy-package/frontend-dist
@@ -55,6 +58,7 @@ jobs:
         cp deploy-prod.sh deploy-package/ || echo "#!/bin/bash" > deploy-package/deploy-prod.sh
         cp deploy-native.sh deploy-package/
         cp deploy-simple-native.sh deploy-package/
+        cp deploy-minimal.sh deploy-package/
 
         # 创建压缩包
         tar -czf deploy-package.tar.gz deploy-package/
@@ -106,20 +110,26 @@ jobs:
           echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> .env
           echo "NODE_ENV=production" >> .env
 
-          # 尝试多种部署方案
-          echo "🚀 尝试简化原生部署..."
-          chmod +x deploy-simple-native.sh
-          if ./deploy-simple-native.sh; then
-            echo "✅ 简化原生部署成功"
+          # 尝试多种部署方案（从最简单到最复杂）
+          echo "🚀 尝试最小化部署..."
+          chmod +x deploy-minimal.sh
+          if ./deploy-minimal.sh; then
+            echo "✅ 最小化部署成功"
           else
-            echo "⚠️ 简化部署失败，尝试完整原生部署..."
-            chmod +x deploy-native.sh
-            if ./deploy-native.sh; then
-              echo "✅ 完整原生部署成功"
+            echo "⚠️ 最小化部署失败，尝试简化原生部署..."
+            chmod +x deploy-simple-native.sh
+            if ./deploy-simple-native.sh; then
+              echo "✅ 简化原生部署成功"
             else
-              echo "⚠️ 原生部署失败，尝试Docker部署..."
-              chmod +x deploy-prod.sh
-              ./deploy-prod.sh
+              echo "⚠️ 简化部署失败，尝试完整原生部署..."
+              chmod +x deploy-native.sh
+              if ./deploy-native.sh; then
+                echo "✅ 完整原生部署成功"
+              else
+                echo "⚠️ 原生部署失败，尝试Docker部署..."
+                chmod +x deploy-prod.sh
+                ./deploy-prod.sh
+              fi
             fi
           fi
         EOF
