fix: 修复Prisma枚举运行时undefined问题，添加Prisma客户端生成

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,8 @@ jobs:
       run: |
         cd backend
         npm ci
+        # 生成Prisma客户端
+        npx prisma generate
         npm run build
 
     - name: Build Frontend
