--- a/nginx/nginx.simple.conf
+++ b/nginx/nginx.simple.conf
@@ -29,7 +29,7 @@ http {
     
     # 上游后端服务
     upstream backend {
-        server backend:3002;
+        server localhost:3002;
     }
     
     server {
