fix: 修复403错误 - 添加前端文件复制和权限设置

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,6 +65,7 @@ jobs:
         cp deploy-minimal.sh deploy-package/
         cp init-prisma.sh deploy-package/
         cp fix-nginx.sh deploy-package/
+        cp fix-403.sh deploy-package/
 
         # 创建压缩包
         tar -czf deploy-package.tar.gz deploy-package/
@@ -159,8 +160,17 @@ jobs:
           if curl -f http://${{ secrets.DOMAIN_NAME }}/api/health; then
             echo "✅ 部署成功！HTTP服务正常运行"
           else
-            echo "❌ 部署可能有问题，请检查服务状态"
-            ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} "cd /opt/lifetracker/current && systemctl status nginx && curl -f http://localhost:3002/api/health"
-            exit 1
+            echo "⚠️ API健康检查失败，尝试修复403错误..."
+            ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} "cd /opt/lifetracker/current && chmod +x fix-403.sh && ./fix-403.sh"
+
+            # 再次检查
+            sleep 10
+            if curl -f -k https://${{ secrets.DOMAIN_NAME }}/ || curl -f http://${{ secrets.DOMAIN_NAME }}/; then
+              echo "✅ 403错误修复成功！网站可访问"
+            else
+              echo "❌ 部署失败，请检查服务状态"
+              ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} "cd /opt/lifetracker/current && systemctl status nginx && curl -f http://localhost:3002/api/health"
+              exit 1
+            fi
           fi
         fi
