--- a/nginx/nginx.ultra-simple.conf
+++ b/nginx/nginx.ultra-simple.conf
@@ -6,15 +6,24 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
     
+    # HTTP重定向到HTTPS
     server {
         listen 80 default_server;
-        listen 443 ssl default_server;
         server_name _;
-        
-        # 简单的SSL配置
-        ssl_certificate /opt/lifetracker/current/nginx/ssl/cert.pem;
-        ssl_certificate_key /opt/lifetracker/current/nginx/ssl/key.pem;
+        return 301 https://$host$request_uri;
+    }
+
+    # HTTPS服务器
+    server {
+        listen 443 ssl default_server;
+        server_name t1n9.xyz www.t1n9.xyz;
+
+        # Let's Encrypt SSL配置
+        ssl_certificate /etc/letsencrypt/live/t1n9.xyz/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/t1n9.xyz/privkey.pem;
         ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384;
+        ssl_prefer_server_ciphers off;
         
         # API代理 - 直接代理，不使用upstream
         location /api/ {
