fix: 修复证书路径检测问题，使用实际存在的证书路径
- 发现证书存在于 /etc/letsencrypt/live/t1n9.xyz-0001/ 而非 t1n9.xyz/
- 修改部署脚本支持多种证书目录命名格式
- 移除不必要的证书重新获取逻辑
- 直接使用现有的有效证书
- 修复nginx配置文件中的证书路径

--- a/nginx/nginx.ultra-simple.conf
+++ b/nginx/nginx.ultra-simple.conf
@@ -18,9 +18,9 @@ http {
         listen 443 ssl default_server;
         server_name t1n9.xyz www.t1n9.xyz;
 
-        # Let's Encrypt SSL配置
-        ssl_certificate /etc/letsencrypt/live/t1n9.xyz/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/t1n9.xyz/privkey.pem;
+        # Let's Encrypt SSL配置（使用实际存在的证书路径）
+        ssl_certificate /etc/letsencrypt/live/t1n9.xyz-0001/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/t1n9.xyz-0001/privkey.pem;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384;
         ssl_prefer_server_ciphers off;
