--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,8 @@
     "@nestjs/throttler": "^5.0.1",
     "@nestjs/websockets": "^10.2.10",
     "@prisma/client": "^6.13.0",
+    "axios": "^1.11.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
