--- a/backend/.env.example
+++ b/backend/.env.example
@@ -19,12 +19,28 @@ CORS_ORIGIN="http://localhost:3001"
 RATE_LIMIT_TTL=60
 RATE_LIMIT_LIMIT=100
 
-# Email Configuration (for future use)
-SMTP_HOST=""
-SMTP_PORT=587
-SMTP_USER=""
-SMTP_PASS=""
-SMTP_FROM=""
+# Email Configuration for Email Verification
+# 邮箱验证码配置
+EMAIL_PROVIDER=qq  # 支持: qq/gmail/163
+EMAIL_USER=your-email@qq.com
+EMAIL_PASSWORD=your-email-authorization-code
+
+# QQ邮箱配置说明：
+# 1. 登录QQ邮箱 -> 设置 -> 账户
+# 2. 开启SMTP服务
+# 3. 生成授权码（不是QQ密码）
+# 4. 将授权码填入 EMAIL_PASSWORD
+
+# Gmail配置说明：
+# 1. 开启两步验证
+# 2. 生成应用专用密码
+# 3. 将应用专用密码填入 EMAIL_PASSWORD
+
+# 163邮箱配置说明：
+# 1. 登录163邮箱 -> 设置 -> POP3/SMTP/IMAP
+# 2. 开启SMTP服务
+# 3. 设置客户端授权密码
+# 4. 将授权密码填入 EMAIL_PASSWORD
 
 # Sentry Configuration (for error tracking)
 SENTRY_DSN=""
@@ -38,3 +54,16 @@ BCRYPT_ROUNDS=12
 
 # WebSocket Configuration
 WS_PORT=3002
+
+# Backup Configuration
+BACKUP_ENABLED=true
+BACKUP_INTERVAL="0 2 * * *"  # 每天凌晨2点备份
+BACKUP_RETENTION_DAYS=30
+
+# Server Configuration (if deploying to remote server)
+SERVER_HOST="localhost"
+DB_HOST="localhost"
+DB_PORT=5432
+DB_USER="lifetracker"
+DB_PASSWORD="your-database-password"
+DB_NAME="lifetracker"
