修复生产环境邮件发送问题
- 添加邮件环境变量到GitHub Actions部署配置
- 复制backend/scripts目录到部署包
- 改进邮件服务错误处理和连接验证
- 添加邮件服务健康检查端点
- 创建邮件配置诊断工具(不依赖nodemailer)
- 添加生产环境邮件问题修复脚本
- 更新部署脚本以检查邮件配置
- 添加GitHub Secrets配置指南
- 修复番茄数量徽章样式和热力图红色系
- 版本号更新到v2.1

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,6 +52,8 @@ jobs:
         cp backend/package-lock.json deploy-package/package-lock.json
         # 复制Prisma schema文件
         cp -r backend/prisma deploy-package/prisma
+        # 复制后端脚本目录（包含邮件诊断工具）
+        cp -r backend/scripts deploy-package/scripts
 
         # 复制前端文件（静态导出）
         cp -r frontend/out deploy-package/frontend-dist
@@ -123,6 +125,10 @@ jobs:
           echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
           echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> .env
           echo "NODE_ENV=production" >> .env
+          # 邮件服务配置
+          echo "EMAIL_PROVIDER=${{ secrets.EMAIL_PROVIDER }}" >> .env
+          echo "EMAIL_USER=${{ secrets.EMAIL_USER }}" >> .env
+          echo "EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD }}" >> .env
 
           # 尝试多种部署方案（从最简单到最复杂）
           echo "🚀 尝试最小化部署..."
