优化部署配置，保护服务器端环境变量
 主要改进：
- 部署时保留服务器现有的.env配置（特别是邮件配置）
- 简化邮件服务验证逻辑，移除冗余检查
- 邮件配置变为可选，不影响应用核心功能
- 优化部署脚本，只在有邮件配置时才进行检查

 技术细节：
- GitHub Actions 不再覆盖服务器的邮件配置
- 备份现有.env文件，合并配置而非替换
- 移除强制性邮件配置验证
- 添加环境变量配置说明文档

 配置优先级：
服务器.env文件 > GitHub Actions Secrets

现在可以安全地在服务器直接配置邮件，不会被部署覆盖！

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -117,18 +117,31 @@ jobs:
           # 创建SSL证书目录
           mkdir -p nginx/ssl
           
-          # 生成环境变量文件
+          # 备份现有的.env文件（如果存在）
+          if [ -f ".env" ]; then
+            echo "备份现有的.env文件..."
+            cp .env .env.backup
+          fi
+
+          # 生成基础环境变量文件
           echo "生成环境变量文件..."
-          echo "DOMAIN_NAME=${{ secrets.DOMAIN_NAME }}" > .env
-          echo "DB_NAME=lifetracker" >> .env
-          echo "DB_USER=lifetracker" >> .env
-          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
-          echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> .env
-          echo "NODE_ENV=production" >> .env
-          # 邮件服务配置
-          echo "EMAIL_PROVIDER=${{ secrets.EMAIL_PROVIDER }}" >> .env
-          echo "EMAIL_USER=${{ secrets.EMAIL_USER }}" >> .env
-          echo "EMAIL_PASSWORD=${{ secrets.EMAIL_PASSWORD }}" >> .env
+          echo "DOMAIN_NAME=${{ secrets.DOMAIN_NAME }}" > .env.new
+          echo "DB_NAME=lifetracker" >> .env.new
+          echo "DB_USER=lifetracker" >> .env.new
+          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env.new
+          echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> .env.new
+          echo "NODE_ENV=production" >> .env.new
+
+          # 如果有备份的.env文件，保留其中的邮件配置
+          if [ -f ".env.backup" ]; then
+            echo "保留现有的邮件配置..."
+            # 提取邮件相关配置
+            grep "^EMAIL_" .env.backup >> .env.new 2>/dev/null || true
+          fi
+
+          # 使用新的配置文件
+          mv .env.new .env
+          echo "✅ 环境变量配置完成"
 
           # 尝试多种部署方案（从最简单到最复杂）
           echo "🚀 尝试最小化部署..."
