修复环境变量合并路径问题
 关键修复：
- 修正.env文件路径，确保在current/目录下操作
- 备份路径：current/.env -> .env.backup
- 生成路径：.env.base -> current/.env
- 合并逻辑：正确处理current/目录下的.env文件

 修复的问题：
- 之前备份了current/.env但在根目录查找.env.backup
- 现在所有操作路径一致，确保配置正确合并
- 添加配置内容显示，便于调试

现在您的邮件配置应该能正确保留了！

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -138,19 +138,27 @@ jobs:
           if [ -f ".env.backup" ]; then
             echo "保留现有的自定义配置..."
             # 先使用基础配置
-            cp .env.base .env
+            cp .env.base current/.env
             # 添加备份中的自定义配置（排除基础配置项）
-            grep -v "^DOMAIN_NAME\|^DB_NAME\|^DB_USER\|^DB_PASSWORD\|^JWT_SECRET\|^NODE_ENV" .env.backup >> .env 2>/dev/null || true
-            echo "✅ 自定义配置已恢复"
+            echo "" >> current/.env
+            echo "# 以下是从备份恢复的自定义配置" >> current/.env
+            grep -v "^DOMAIN_NAME\|^DB_NAME\|^DB_USER\|^DB_PASSWORD\|^JWT_SECRET\|^NODE_ENV\|^#\|^$" .env.backup >> current/.env 2>/dev/null || true
+            echo "✅ 自定义配置已恢复到 current/.env"
+
+            # 显示恢复的配置
+            echo "📋 恢复的自定义配置："
+            grep -v "^DOMAIN_NAME\|^DB_NAME\|^DB_USER\|^DB_PASSWORD\|^JWT_SECRET\|^NODE_ENV\|^#\|^$" .env.backup 2>/dev/null || echo "  无自定义配置"
           else
-            cp .env.base .env
-            echo "ℹ️ 使用默认配置"
+            cp .env.base current/.env
+            echo "ℹ️ 使用默认配置，未找到备份文件"
           fi
 
           # 清理临时文件
           rm -f .env.base .env.backup
 
           echo "✅ 环境变量配置完成"
+          echo "📋 最终配置文件内容："
+          cat current/.env
 
           # 尝试多种部署方案（从最简单到最复杂）
           echo "🚀 尝试最小化部署..."
