--- a/backend/package.json
+++ b/backend/package.json
@@ -48,6 +48,7 @@
     "cors": "^2.8.5",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
+    "nanoid": "^5.1.5",
     "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
