--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,6 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.0.0-alpha.37",
     "@types/node": "^20.19.10",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -37,7 +36,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
     "postcss": "^8.5.0",
-    "tailwindcss": "^4.0.0-alpha.37",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
