--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,8 @@
-# 构建阶段
-FROM node:18-alpine AS builder
+FROM node:18-alpine
 
 WORKDIR /app
 
-# 复制package.json和package-lock.json
+# 复制package文件
 COPY package*.json ./
 
 # 安装依赖
@@ -12,30 +11,15 @@ RUN npm ci
 # 复制源代码
 COPY . .
 
+# 设置环境变量
+ENV NODE_ENV=production
+ENV NEXT_TELEMETRY_DISABLED=1
+
 # 构建应用
 RUN npm run build
 
-# 生产阶段
-FROM node:18-alpine AS runner
-
-WORKDIR /app
-
-# 创建非root用户
-RUN addgroup --system --gid 1001 nodejs
-RUN adduser --system --uid 1001 nextjs
-
-# 复制构建产物
-COPY --from=builder /app/public ./public
-COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
-COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
-
-USER nextjs
-
 # 暴露端口
-EXPOSE 3001
-
-ENV PORT 3001
-ENV HOSTNAME "0.0.0.0"
+EXPOSE 3000
 
 # 启动应用
-CMD ["node", "server.js"]
+CMD ["npm", "start"]
